<resources>
    <string name="app_name">Pokedex</string>
    <string name="name">Name:</string>
    <string name="id">#</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="catergory">Catergory:</string>
    <string name="hp">HP:</string>
    <string name="attack">ATTACK:</string>
    <string name="defense">DEFENSE:</string>
    <string name="special_attack">SPECIAL ATTACK:</string>
    <string name="special_defense">SPECIAL DEFENSE:</string>
    <string name="speed">SPEED:</string>

    <array name="pokemon_pics">
        <item>@drawable/B01</item>
        <item>@drawable/I02</item>
        <item>@drawable/V003</item>
        <item>@drawable/C004</item>
        <item>@drawable/C005</item>
        <item>@drawable/C006</item>
        <item>@drawable/S007</item>
        <item>@drawable/W008</item>
        <item>@drawable/B009</item>
        <item>@drawable/C010</item>

    </array>

</resources>
