<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/pokemon_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <TextView

        android:id="@+id/pokemon_id"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"/>

    <TextView
        android:id="@+id/pokemon_height"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/pokemon_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/pokemon_catergory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/catergory"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/pokemon_hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hp"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/pokemon_attack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attack"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/pokemon_defense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defense"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/pokemon_spa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/special_attack"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/pokemon_spd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/special_defense"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/pokemon_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speed"/>

    <ImageView
        android:id="@+id/pokemon_pics1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</android.support.v7.widget.LinearLayoutCompat>